--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <html>
-  This is my title.I like pizza
+  This is my title. I like pizza
+
+  <h2> fellas
+    
 
 
 
-
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 </html>
