--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
       But still, like air, I'll rise."
         </pre>
-      </center>
+    </center>
+    
     <center>
     <table>
       <tr>
@@ -50,7 +51,7 @@
     
   </style>
     body {
-      background-color: antiquewhite:
+      background-color: antiquewhite;
     }
   
       <h2> {
