--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title> MAYA </title>
+      <title> AidanWVHS </title>
   </head>
     
   <body> 
@@ -35,7 +35,7 @@
       </tr>
       <tr>
         <td> Web Desgin </td>
-        <td> Term 2 </td>
+        <td> Ms. Neumann </td>
         </table>
     </center>
     
