--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <li><a href="#home">Home</a></li>
     <li><a href="#classes">Classes</a> </li>
     <li><a href="#cupcakes">Cupcake Pics</a>  </li>
+     <br>
+        <br>
+        <h1> Ms. Neumann </h1> 
+        <table align="center" id="classes">
        
   </ul>
     
