--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       body {
   background-color: salmon;
 }
-
+   body {
     h1 {
       font-size: 200%;
       color: gold;
@@ -108,7 +108,7 @@
       color: green;
       font-size: 50px;
     }
-      
+      body {
       
       </style>
   
