--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <nav class="w3-bar w3-black">
   <a href="#home" class="w3-button w3-bar-item">Home</a>
   <a href="#convince" class="w3-button w3-bar-item">Band</a>
-  <a href="#index" class="w3-button w3-bar-item">Tour</a>
+  <a href="#artifact" class="w3-button w3-bar-item">Tour</a>
   <a href="#nouns" class="w3-button w3-bar-item">Contact</a>
 </nav>
     
