--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
     
   <style>
     body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+    }
+
+    .topnav a {
+      float: left;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .topnav a.active {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    body {
       background-color: antiquewhite;
     }
     a:hover {
@@ -35,7 +64,6 @@
       body {
         background-color: salmon;
     }
-   
       
       </style>
   
