--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <body> 
     <div id="navbar"> 
       <ul> 
-        <li><a href="http://github.com">Link 1</a></li> 
-        <li><a href="http://github.com">Link 2</a></li> 
-        <li><a href="http://github.com">Link 3</a></li> 
+        <li><a href="convince.html">Convince</a></li> 
+        <li><a href="artifact.jpg">Artifacts</a></li> 
+        <li><a href="nouns.html">Nouns</a></li> 
         <li><a href="http://github.com">Link 4</a></li> 
         <li><a href="http://github.com">Link 5</a></li> 
       </ul> 
