--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <head> 
 <title>Horizontal Navigation Bar w/Rollover Effect</title> 
 <style type="text/css"> 
-<!-- 
+
  
-     #navbar ul { 
+    ul { 
         margin: 0; 
         padding: 5px; 
         list-style-type: none; 
@@ -15,23 +15,23 @@
         background-color: #000; 
         } 
 
-    #navbar ul li {  
+    ul li {  
         display: inline; 
         } 
 
-    #navbar ul li a { 
+    ul li a { 
         text-decoration: none; 
         padding: .2em 1em; 
         color: #fff; 
         background-color: #000; 
         } 
 
-    #navbar ul li a:hover { 
+    ul li a:hover { 
         color: #000; 
         background-color: #fff; 
         } 
 
-    --> 
+    
     </style> 
     </head> 
     <body> 
