--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <head> 
 <title>Horizontal Navigation Bar w/Rollover Effect</title> 
 <style type="text/css"> 
-    body {background-color: indigo;}
-
+    body {
+        background-color: indigo;
+        }
     
     ul { 
         margin: 0; 
