--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Horizontal Navigation Bar w/Rollover Effect</title> 
 <style type="text/css"> 
     body {
-        background-color: indigo;
+        background-color: gray-white;
         }
     
     ul { 
