--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         padding: 5px; 
         list-style-type: none; 
         text-align: center; 
-        background-color: #000; 
+        background-color: #23272a; 
         } 
 
     ul li {  
@@ -27,7 +27,7 @@
         text-decoration: none; 
         padding: .2em 1em; 
         color: #fff; 
-        background-color: #000; 
+        background-color: #23272a; 
         } 
 
     ul li a:hover { 
