--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     ul li a { 
         text-decoration: none; 
         padding: .2em 1em; 
-        color: #fff; 
-        background-color: #23272a; 
+        color: #23272a; 
+        background-color: #fff; 
         } 
 
     ul li a:hover { 
