--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     ul li a { 
         text-decoration: none; 
         padding: .2em 1em; 
-        color: #23272a; 
+        color: #99aab5; 
         background-color: #fff; 
         } 
 
     ul li a:hover { 
-        color: #000; 
+        color: #23272a; 
         background-color: #fff; 
         } 
 
