--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         padding: 5px; 
         list-style-type: none; 
         text-align: center; 
-        background-color: #23272a; 
+        background-color: #fff; 
         } 
 
     ul li {  
@@ -31,8 +31,8 @@
         } 
 
     ul li a:hover { 
-        color: #23272a; 
-        background-color: #23272a; 
+        color: #fff; 
+        background-color: #fff; 
         } 
 
     
