--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ul li a { 
         text-decoration: none; 
         padding: .2em 1em; 
-        color: #99aab5; 
+        color: #fff; 
         background-color: #fff; 
         } 
 
