--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         padding: 5px; 
         list-style-type: none; 
         text-align: center; 
-        background-color: #99aab5; 
+        background-color: #000; 
         } 
 
     ul li {  
@@ -26,7 +26,7 @@
     ul li a { 
         text-decoration: none; 
         padding: .2em 1em; 
-        color: #2c2f33; 
+        color: #fff; 
         background-color: #000; 
         } 
 
