--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     ul li a:hover { 
         color: #4c555a; 
-        background-color: #fff; 
+        background-color: #000; 
         } 
 
     
