--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         } 
 
     ul li a:hover { 
-        color: #4c555a; 
+        color: #fff; 
         background-color: #000; 
         } 
 
