--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
       <title> AidanWVHS </title>
   </head>
   <head> 
+
+
+    <body>
+        <div style="background-image: url(https://wallpapercave.com/wp/wp5090905.jpg);
+        background-size: cover; height:480px; padding-top:80px;">
+        </div>
+    </body>     
+
+      
+      
 <title>Horizontal Navigation Bar w/Rollover Effect</title> 
 <style type="text/css"> 
     body {
