--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         } 
 
     ul li a:hover { 
-        color: #fff; 
+        color: #4c555a; 
         background-color: #000; 
         } 
 
