--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a href="convince.html">Convince</a></li> 
         <li><a href="artifact.jpg">Artifacts</a></li> 
         <li><a href="nouns.html">Nouns</a></li> 
-        <li><a href="food/home.html"></a></li> 
+        <li><a href="food/home.html">Food</a></li> 
         <li><a href="Link">Link 5</a></li> 
       </ul> 
    </div> 
