--- a/food/home.html
+++ b/food/home.html
@@ -9,7 +9,7 @@
   <body>
     
   <ul class="nav"> 
-    <li class="nav"> <a href="home.html"> HOME </a> </li>
+    <li class="nav"> <a href="index.html"> HOME </a> </li>
     <li class="nav"> <a href="menu.html"> MENU </a> </li>
   </ul>
     
