--- a/food/home.html
+++ b/food/home.html
@@ -10,7 +10,7 @@
     
   <ul class="nav"> 
     <li class="nav"> <a href="index.html"> HOME </a> </li>
-    <li class="nav"> <a href="menu.html"> MENU </a> </li>
+    <li class="nav"> <a href="food/menu.html"> MENU </a> </li>
   </ul>
     
     <br>
