--- a/food/home.html
+++ b/food/home.html
@@ -57,7 +57,7 @@
       <body> 
       <div id="navbar"> 
         <ul> 
-          <li><a href="home.html">Food</a></li> 
+          <li><a href="../index.html">About the Creator</a></li> 
           <li><a href="food/menu.html">Menu</a></li> 
         </ul> 
      </div> 
