--- a/food/home.html
+++ b/food/home.html
@@ -58,7 +58,7 @@
       <div id="navbar"> 
         <ul> 
           <li><a href="../index.html">About the Creator</a></li> 
-          <li><a href="../menu.html">Menu</a></li> 
+          <li><a href="menu.html">Menu</a></li> 
         </ul> 
      </div> 
       
