--- a/store/home.html
+++ b/store/home.html
@@ -1,1 +1,24 @@
-
+<html>
+  <body>
+    <head> 
+      <title>
+        OGFood.Org
+      </title>
+    </head>
+    
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </body>
+</html>
