--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="artifact.jpg">Artifacts</a></li> 
         <li><a href="nouns.html">Nouns</a></li> 
         <li><a href="food/home.html">Food</a></li> 
-        <li><a href="Link">Link 5</a></li> 
+        <li><a href="store/home.html">Store</a></li> 
       </ul> 
    </div> 
     
