--- a/store/home.html
+++ b/store/home.html
@@ -14,7 +14,7 @@
   
   <form autocomplete="off" action="/action_page.php">
     <div class="autocomplete" style="width:300px;">
-       <input id="myInput" type="text" name="myCountry" placeholder="Search..">
+       <input id="myInput" type="text" name="Aidan" placeholder="Search..">
      </div>
    </form>
        
