--- a/store/home.html
+++ b/store/home.html
@@ -5,8 +5,14 @@
         OGFood.Org
       </title>
     </head>
+  <body>
+    <div class="Back">
+      background-color: "gray"
+    </div>
+  </body>
   
-  
+    
+    
   <center>
     <p> OGFood.Org
     </p>
