--- a/store/home.html
+++ b/store/home.html
@@ -6,7 +6,8 @@
       </title>
     </head>
   <style>    
-    body {background-color: grey;}
+    body {background-color: gray;
+    }
   </style>
     
   
