--- a/store/home.html
+++ b/store/home.html
@@ -33,15 +33,19 @@
   <center> 
   <div class = "A">
     <img src= "tumblr_mfcz52AJAo1r8l6i6o1_500.gif" width="300px" >
+    Bred
     </div>
   <div class = "B">
     <img src= "stagg-chili-no-beans-450x450.png" width="300px">
+    Classic Chili in a can
     </div>
   <div class = "C">
     <img src= "0961cbc18f6578adf49b5888e3152a78-celery-herb-illustration-by-vexels.png" width="300px">
+    Celery
     </div>
   <dov class = "D">
     <img src= "kfc_food_PNG4.png" width="300px">
+    Fried Chicken
     </div>
   </center>  
     
