--- a/store/home.html
+++ b/store/home.html
@@ -9,6 +9,10 @@
     body {background-color: gray;
     }
   </style>
+  <center>
+    <div class "Head">
+      <img src = " FoodProductTop.jpg " width= "50px">
+    </div>
     
   
     
