--- a/store/home.html
+++ b/store/home.html
@@ -51,7 +51,7 @@
     </div>
   <dov class = "D">
     <img src= "kfc_food_PNG4.png" width="300px">
-    Fried Chicken
+    Expired Fried Chicken
     </div>
   </center>  
     
