--- a/store/home.html
+++ b/store/home.html
@@ -54,8 +54,7 @@ ul {
     </center>
       
  
-  .floatRightClear{float:right;clear:right;margin-left:20px
-  }
+  <link rel="stylesheet" href="style.css" Type="text/css" media="all">
   <center> 
   <div class = "Cart" >
     <img src= "shopping_cart_PNG38.png" width= "50px" class = "floatRightClear">
