--- a/store/home.html
+++ b/store/home.html
@@ -57,8 +57,7 @@ ul {
   
   <center> 
   <div class = "Cart" >
-    <link rel="stylesheet" href="style.css" Type="text/css" media="all">
-    <img src= "shopping_cart_PNG38.png" width= "50px" class = "floatRightClear">
+    <img src= "shopping_cart_PNG38.png" width= "50px" float: right>
     
     </div>
     
