--- a/store/home.html
+++ b/store/home.html
@@ -57,7 +57,7 @@ ul {
   
   <center> 
   <div class = "Cart" >
-    <img src= "shopping_cart_PNG38.png" width= "50px" float: right>
+    <img src= "shopping_cart_PNG38.png" width= "50px" align="left">
     
     </div>
     
