--- a/store/home.html
+++ b/store/home.html
@@ -57,7 +57,7 @@ ul {
   
   <center> 
   <div class = "Cart" >
-    <img src= "shopping_cart_PNG38.png" width= "50px" align="left">
+    <img src= "shopping_cart_PNG38.png" width= "50px" align="right" align="top">
     
     </div>
     
