--- a/store/home.html
+++ b/store/home.html
@@ -33,9 +33,9 @@ ul {
 
 
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#home" style = "color:white;">Home</a></li>
+  <li><a href="#contact" style= "color:white;">Contact</a></li>
+  <li><a href="#about" style= "color:white;">About</a></li>
 </ul>
 
     
