--- a/store/home.html
+++ b/store/home.html
@@ -2,7 +2,7 @@
   <body>
     <head> 
       <title>
-        OGFood.Org
+        <h1 style="color: white;">OGFood.Org</h1>
       </title>
     </head>
   <style>    
