--- a/store/home.html
+++ b/store/home.html
@@ -2,7 +2,7 @@
   <body>
     <head> 
       <title>
-        <h1 style="color: white;">OGFood.Org</h1>
+        OGFood.Org
       </title>
     </head>
   <style>    
@@ -43,8 +43,7 @@ ul {
     
     
   <center>
-    <p> OGFood.Org
-    </p>
+    <h1 style="color: white;">OGFood.Org</h1>
   </center>
   
   <form autocomplete="off" action="/action_page.php">
