--- a/store/home.html
+++ b/store/home.html
@@ -43,7 +43,7 @@ ul {
     
     
   <center>
-    <h1 style="color: white;">OGFood.Org</h1>
+    <p style="color: white;">OGFood.Org</p>
   </center>
   
   <form autocomplete="off" action="/action_page.php">
