--- a/store/home.html
+++ b/store/home.html
@@ -15,7 +15,11 @@
     </div>
   </center>
   
-  
+  <div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    Welcome.
+  </div>
+    
   <div class = "Cart" >
     <img src= "shopping_cart_PNG38.png" width= "50px" align="right" align="top">
     
