--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         <li><a href="convince.html">Convince</a></li> 
         <li><a href="artifact.jpg">Artifacts</a></li> 
         <li><a href="nouns.html">Nouns</a></li> 
+        <li><a href="team/home.html">Store</a></li> 
         <li><a href="food/home.html">Food</a></li> 
         <li><a href="store/home.html">Store</a></li> 
+        <li><a href="random/home.html">Store</a></li> 
       </ul> 
    </div> 
     <form autocomplete="off" action="/action_page.php">
