--- a/team/home.html
+++ b/team/home.html
@@ -6,8 +6,8 @@
       </title>
     </head>
     
-    <div style="background-image: url('Barcelona_(Logo).png');
-    background-size: cover; height:800px; padding-top:80px;">
+    <div class = "Logo">
+      <img src = "Barcelona_(Logo).png" width = "80px">
     </div>
 
     
