--- a/team/home.html
+++ b/team/home.html
@@ -29,7 +29,7 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="/index.html">About Me</a></li>
+        <li><a href="main/index.html">About Me</a></li>
         <li><a href="#">Page 2</a></li>
         <li><a href="#">Page 3</a></li>
       </ul>
