--- a/team/home.html
+++ b/team/home.html
@@ -30,8 +30,8 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="main/index.html">About Me</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Matches</a></li>
       </ul>
     </div>
     </nav>
