--- a/team/home.html
+++ b/team/home.html
@@ -58,8 +58,17 @@
 <body>
 
 <div class="grid-container">
-  <div class="grid-item">1</div>
-  <div class="grid-item">2</div>
+  <div class="grid-item">
+    <img src = "https___specials-images.forbesimg.com_imageserve_5ec595d45f39760007b05c07_0x0.jpg_background=000000&cropX1=989&cropX2=2480&cropY1=74&cropY2=1564" width = "100px">
+    <h2 style = "color: Black;"> Lionel Messi #10 </h2>
+      
+  </div>
+  
+  <div class="grid-item">
+  
+  
+  </div>
+  
   <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
