--- a/team/home.html
+++ b/team/home.html
@@ -59,12 +59,14 @@
 
 <div class="grid-container">
   <div class="grid-item">
-    <img src = "https___specials-images.forbesimg.com_imageserve_5ec595d45f39760007b05c07_0x0.jpg_background=000000&cropX1=989&cropX2=2480&cropY1=74&cropY2=1564" width = "100px">
-    <h2 style = "color: Black;"> Lionel Messi #10 </h2>
-      
+    <img src = "https___specials-images.forbesimg.com_imageserve_5ec595d45f39760007b05c07_0x0.jpg_background=000000&cropX1=989&cropX2=2480&cropY1=74&cropY2=1564" width = "200px">
+    <h2 style = "color: Red;"> Lionel Messi #10 </h2>   
   </div>
   
   <div class="grid-item">
+    <img src = "Busquets-2.jpg" width = "200px">
+    <h2 style = "color: Red;"> Sergio Busquets #5 </h2>
+    
   
   
   </div>
