--- a/team/home.html
+++ b/team/home.html
@@ -57,15 +57,17 @@
 </style>
 </head>
 <body>
+  
 
 
 <div class="grid-container">
   <div class="grid-item">
     <center>  
-    <img src = "https___specials-images.forbesimg.com_imageserve_5ec595d45f39760007b05c07_0x0.jpg_background=000000&cropX1=989&cropX2=2480&cropY1=74&cropY2=1564" "width="200" height="140">
+    <img src = "https___specials-images.forbesimg.com_imageserve_5ec595d45f39760007b05c07_0x0.jpg_background=000000&cropX1=989&cropX2=2480&cropY1=74&cropY2=1564" width="200" height="140">
     <h2 style = "color: Red;"> Lionel Messi #10 </h2>   
     </center>  
   </div>
+                            
   
   
   <div class="grid-item">
@@ -75,7 +77,7 @@
     </center>  
 
   </div>
- 
+                             
   
   <div class="grid-item">3
     <center>
