--- a/team/home.html
+++ b/team/home.html
@@ -79,7 +79,7 @@
   </div>
                              
   
-  <div class="grid-item">3
+  <div class="grid-item">
     <center>
     <img src = "1209900034.jpeg" width="200" height="140">
     <h2 style = "color: Red;"> Marc-Andre ter Stegen #1 </h2>
@@ -89,6 +89,8 @@
   
   
   <div class="grid-item">4</div>
+  
+  
   <div class="grid-item">5</div>
   <div class="grid-item">6</div>  
   <div class="grid-item">7</div>
