--- a/team/home.html
+++ b/team/home.html
@@ -9,7 +9,7 @@
     
     <center>
     <div class = "Logo">
-      <img src = "Barcelona_(Logo).png" width = "80px">
+      <img src = "Barcelona_(Logo).png" width="200" height="140">
     </div>
     </center>
     
