--- a/team/home.html
+++ b/team/home.html
@@ -9,7 +9,7 @@
     
     <center>
     <div class = "Logo">
-      <img src = "Barcelona_(Logo).png" width="200" height="140">
+      <img src = "Barcelona_(Logo).png" width="100px" margin-left = "-50px">
     </div>
     </center>
     
