--- a/team/home.html
+++ b/team/home.html
@@ -88,7 +88,12 @@
 
   
   
-  <div class="grid-item">4</div>
+  <div class="grid-item">
+    <center>
+    <img src =
+  
+  
+  </div>
   
   
   <div class="grid-item">5</div>
