--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <li><a href="team/home.html">Team</a></li> 
         <li><a href="food/home.html">Food</a></li> 
         <li><a href="store/home.html">Store</a></li> 
-        <li><a href="random/home.html">Random</a></li> 
+        <li><a href="random/home.html">Random</a></li>
+        <li><a href="crime/home.html">Crime</a></li>
       </ul> 
    </div> 
     <form autocomplete="off" action="/action_page.php">
