--- a/crime/home.html
+++ b/crime/home.html
@@ -19,7 +19,7 @@
     
     <center>  
       <div class = Quote">
-        <p style="color: white;">"Either way, they'll teach you a lesson" - Ms. Neumann ~ cliental </p>
+        <p style="color: white;">" 'Either way, they will teach you a lesson' - Ms. Neumann ~ cliental" </p>
       </div>
   </center>
       
