--- a/crime/home.html
+++ b/crime/home.html
@@ -66,12 +66,13 @@
         <h2> Mrs. Graef, Detective </h2>
       </div>
       
+      <div class="grid-item">
+        <h2> Mr. Clover, Po Po </h2>
+      </div>
       
-      <div class="grid-item">5</div>
-      <div class="grid-item">6</div>  
-      <div class="grid-item">7</div>
-      <div class="grid-item">8</div>
-      <div class="grid-item">9</div>  
+      <div class="grid-item">
+        <h2> Mrs. Heard, Secretary </h2>
+      </div>    
     </div>
 
     </body>
