--- a/crime/home.html
+++ b/crime/home.html
@@ -68,7 +68,7 @@
     }
     
     .buynow{
-      background-color: #000000;
+      background-color: #FFFFF;
       border: none;
       padding: 10px 15px;
       text-align: center;
