--- a/crime/home.html
+++ b/crime/home.html
@@ -118,6 +118,7 @@
 
     </body>
     
+    <center>
     <h2> PRICING </h2>
       <div class="ticketwrapper">
         <div class="ticketitem">
@@ -133,6 +134,7 @@
           <button class="buynow"> Buy Now </button>
         </div>
       </div>
+    </center>
 
 
 
