--- a/crime/home.html
+++ b/crime/home.html
@@ -76,7 +76,7 @@
       font-size: 16px;
       transition-duration: 0.4s;
       cursor: pointer;
-      font-family: 'Bebas Neue', cursive;
+      font-family: 'Arial', sans-serif;
       letter-spacing: 2.5px;
       font-weight: 20;
       border-radius: 5px;
