--- a/crime/home.html
+++ b/crime/home.html
@@ -24,6 +24,12 @@
       </div>
   </center>
     
+    <center>
+      <div class = "Bars">
+        <img src = "bars.png" width = 200>
+      </div>
+    </center>
+    
     <head>
     <style>
     .grid-container {
